# foundry

./: .env.example  .gitignore  README.md  deploy.sh  foundry.py  pyproject.toml  vercel.json
.github/workflows/: deploy.yml
db/migrations/: 001_core_tables.sql  002_tool_secrets.sql  003_better_auth.sql
sdk/: README.md  pyproject.toml
sdk/foundry/: __init__.py  client.py  exceptions.py
src/: __init__.py
src/agent/: __init__.py  builder_agent.py  generator.py  planner.py  prompts.py  providers.py  sdk_agents.py  tools.py
src/api/: __init__.py  auth.py  billing.py  keys.py  routes.py  schemas.py  secrets.py  usage.py
src/builder/: __init__.py  sandbox.py  validator.py
src/events/: __init__.py  amigo.py  emitter.py
src/infra/: __init__.py  autumn.py  config.py  database.py  logging.py  secrets.py
src/orchestration/: __init__.py  workflow.py
src/registry/: __init__.py  store.py
tests/: __init__.py  test_api.py  test_validator.py
web/: env.example  package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api-reference/: page.tsx
web/src/app/api/dashboard/billing/: route.ts
web/src/app/api/dashboard/keys/: route.ts
web/src/app/api/dashboard/tools/: route.ts
web/src/app/api/dashboard/tools/invoke/: route.ts
web/src/app/api/dashboard/usage/: route.ts
web/src/app/api/my-org/: route.ts
web/src/app/api/setup-org/: route.ts
web/src/app/blog/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/app/pricing/: page.tsx
web/src/app/setup/: page.tsx
web/src/app/signup/: page.tsx
web/src/components/: CTA.tsx  CodeDemo.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  TrustBanner.tsx
web/src/lib/: api-key-utils.ts  api.ts  auth-client.ts  auth.ts  server-auth.ts
web/src/lib/auth/: server.ts
