[project]
name = "tool-foundry"
version = "0.1.0"
description = "Dynamic tool creation and execution service for Amigo agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "modal>=0.64.0",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

# Packages pre-installed in tool sandbox for use by generated tools
sandbox = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
# Note: UP (pyupgrade) rules disabled for Python 3.9 compatibility
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
