[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-sdk"
version = "0.1.0"
description = "Python SDK for Foundry - AI-powered tool generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Foundry", email = "hello@foundry.ai" },
]
keywords = [
    "ai",
    "tools",
    "llm",
    "agents",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://foundry.ai"
Documentation = "https://docs.foundry.ai"
Repository = "https://github.com/foundry-ai/foundry-sdk"

[tool.hatch.build.targets.sdist]
include = [
    "/foundry",
]

[tool.hatch.build.targets.wheel]
packages = ["foundry"]
